# deepsea-track

./: .dockerignore  .gitignore  .releaserc.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.amd  Dockerfile.arm  LICENSE.txt  README.md  bitbucket-pipelines.yml  docker-compose.yml  docker_build.sh  docker_setup.sh  utils.py
apps/: CMakeLists.txt  deepsea-track.cc
data/benthic/: deepsea_cfg.json  deepsea_class_map.json  f000001.xml  f000002.xml  f000003.xml  f000005.xml  f000007.xml  f000008.xml  f000009.xml  f000010.xml  f000011.xml  f001003.xml  f001005.xml
data/benthic_tracks/: f000001.json  f000002.json  f000003.json  f000004.json  f000005.json  f000006.json  f000007.json  f000008.json  f000009.json  f000010.json  f000011.json  f000012.json
data/midwater/: deepsea_cfg.json  deepsea_class_map.json  f000001.xml  f000002.xml  f000003.xml  f000004.xml  f000005.xml
data/midwater_tracks/: f000001.json  f000002.json  f000003.json  f000004.json  f000005.json
doc/: doxygen  index.md
include/deepsea/: arguments.h  event_object.h  fast_tracker.h  features.h  image_cache.h  logger.h  preprocess.h  surprise_map.h  visual_event.h  visual_event_mgr.h  zmq_listener.h
include/deepsea/util/: config.h  utils.h  voc_object.h  voc_utils.h
src/: CMakeLists.txt  arguments.cc  event_object.cc  fast_tracker.cc  features.cc  logger.cc  poisson_model.cc  preprocess.cc  surprise_detector.cc  surprise_map.cc  version.h.in  visual_event.cc  visual_event_mgr.cc  zmq_listener.cc
src/deepsea/: CMakeLists.txt  deepsea-track.cc  event_object.cc  event_object.h  logger.cc  logger.h  poisson_model.cc  poisson_model.h  preprocess.cc  surprise_detector.cc  surprise_detector.h  surprise_map.cc  visual_event.cc  visual_event_mgr.cc
src/deepsea/util/: config.cc  config_class_map.cc  config_class_map.h  math_utils.h  utils.cc  utils.h  voc_object.cc  voc_utils.h
src/test/: CMakeLists.txt  test_config.cc  test_confignames.cc  test_detmodel_load.cc  test_detmodel_run.cc  test_eventobject.cc  test_flicker.cc  test_l2gradientflow.cc  test_preprocess.cc  test_surprise.cc  test_tracker.cc  test_visualevent.cc  test_visualobjecttracker.cc  test_voc.cc
src/util/: config.cc  config_class_map.cc  utils.cc  voc_object.cc
test/: CMakeLists.txt  test_confignames.cc  test_l2gradientflow.cc  test_options.cc  test_tracker.cc  test_visualobjecttracker.cc  test_voc.cc  test_xercesc.cc  test_zmqreceive.cc
